# testforge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-20-demo-polish-design.md
results/: ablation_stdout.txt  demo_run.txt  report.md
scripts/: ablation.py  build_report.py  end_to_end_pipeline.py  executor_author_test.py  llm_api_test.py  llm_test.py
src/testforge/: __init__.py  adversary.py  author.py  cli.py  executor.py  judge.py  llm.py  models.py  orchestrator.py  supervisor.py
src/testforge/prompts/: adversary.txt  author.txt  author_v1.txt  judge.txt
targets/: sample.py
tests/: test_executor.py  test_orchestrator_flags.py
traces/: balanced_brackets_baseline.jsonl  balanced_brackets_heterogeneous.jsonl  balanced_brackets_homogeneous.jsonl  baseline_smoke.jsonl  cb_smoke.jsonl  ctx_mock.jsonl  ctx_smoke.jsonl  days_in_month_heterogeneous.jsonl  days_in_month_homogeneous.jsonl  is_valid_isbn10_baseline.jsonl  is_valid_isbn10_heterogeneous.jsonl  is_valid_isbn10_homogeneous.jsonl  kb_mock.jsonl  kb_smoke.jsonl  parse_duration_heterogeneous.jsonl  parse_duration_homogeneous.jsonl  parse_ipv4_heterogeneous.jsonl  parse_ipv4_homogeneous.jsonl  post_format_smoke.jsonl  roman_to_int_baseline.jsonl  roman_to_int_baseline_test.jsonl  roman_to_int_heterogeneous.jsonl  roman_to_int_heterogeneous_test.jsonl  roman_to_int_homogeneous.jsonl  roman_to_int_homogeneous_test.jsonl  round_half_even_heterogeneous.jsonl  round_half_even_homogeneous.jsonl  run_length_decode_heterogeneous.jsonl  run_length_decode_homogeneous.jsonl  session_perf.jsonl  session_smoke.jsonl  wildcard_match_heterogeneous.jsonl  wildcard_match_homogeneous.jsonl
