[project]
name = "testforge"
version = "0.1.0"
description = "a multi-agent test quality system for open model pipelines"
readme = "README.md"
authors = [
    { name = "Allison Zhao", email = "allisonzhao.uni@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[project.scripts]
testforge = "testforge:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
