[project]
name = "testforge"
version = "0.1.0"
description = "A multi-agent test quality system for open-model pipelines"
readme = "README.md"
authors = [
    { name = "Allison Zhao", email = "allisonzhao.uni@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["multi-agent", "llm", "mutation-testing", "test-generation"]
dependencies = [
    "httpx>=0.28.1",
    "mutmut>=3.5.0",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

# [project.scripts]
# testforge = "testforge:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.12",
]

[project.urls]
Repository = "https://github.com/allison-stack/testforge"
Issues = "https://github.com/allison-stack/testforge/issues"

# ─────────────────────────── ruff ───────────────────────────
# Docs: https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["runs", ".cache"]

[tool.ruff.lint]
# Read each rule set before adding more: https://docs.astral.sh/ruff/rules/
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ─────────────────────────── mypy ───────────────────────────
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true

# ─────────────────────────── pytest ───────────────────────────
# Docs: https://docs.pytest.org/en/stable/reference/customize.html

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: tests that hit network or take >1s",
    "integration: tests that require Docker",
]
